# XsGameEngine-REF

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  XsGameEngine[ReferenceProject].sln  build.sh  configure.sh
Docs/: VulkanRendererDiagram.drawio
Submodules/: CMakeLists.txt
XsGameEngine/: CMakeLists.txt
XsGameEngine/Models/: CAMERON_MODEL.mtl  Char.mtl  basicOBJ.mtl  plane.mtl  untitled.mtl
XsGameEngine/Shaders/OpenGL_Shaders/: Compile.bat  frag.spv  ps.spv  shader.frag  vert.spv  vs.spv
XsGameEngine/Shaders/Vulkan_Shaders/: Compile.bat  frag.spv  shader.frag  shader.vert  vert.spv
XsGameEngine/src/: Camera.h  PreprocessorDefs.h  Time.cpp  Time.h
XsGameEngine/src/AssetLoading/: Entity.cpp
XsGameEngine/src/AssetLoading/Lights/: DirectionalLight.cpp  Light.cpp  Light.h
XsGameEngine/src/AssetLoading/OpenGL_Assets/: OpenGL_Assets.h  OpenGL_Mesh.cpp  OpenGL_MeshModel.cpp  OpenGL_Texture.h
XsGameEngine/src/AssetLoading/Vulkan_Assets/: Vulkan_Assets.cpp  Vulkan_Assets.h  Vulkan_Mesh.h  Vulkan_MeshModel.cpp  Vulkan_Texture.h
XsGameEngine/src/ProgramLayers/: ProgramLayers.h
XsGameEngine/src/Renderer/: GUI_Renderer.cpp  GUI_Renderer.h
XsGameEngine/src/Renderer/OpenGL_Renderer/: Material.cpp  Material.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h  Shaders.h
XsGameEngine/src/Renderer/Vulkan_Renderer/: VkValidation.h  VulkanUtillities.h  Vulkan_Renderer.cpp
XsGameEngine/src/Window/Private/: GLFW_Window.cpp
XsGameEngine[ReferenceProject]/: XsGameEngine[ReferenceProject].sln
XsGameEngine[ReferenceProject]/ProjectDocs/: VulkanRendererDiagram.drawio
XsGameEngine[ReferenceProject]/ProjectDocs/DoxyGen/: Doxyfile
XsGameEngine[ReferenceProject]/ProjectDocs/DoxyGen/html/: STYLE.css  _camera_8cpp.html  _camera_8h.html  _camera_8h_source.html  _directional_light_8cpp.html  _directional_light_8h.html  _directional_light_8h_source.html  _entity_8cpp.html  _entity_8h.html  _entity_8h_source.html  _g_l_f_w___window_8cpp.html  _g_l_f_w___window_8h.html  _g_l_f_w___window_8h_source.html  _g_u_i___renderer_8cpp.html  _g_u_i___renderer_8cpp.js  _g_u_i___renderer_8h.html  _g_u_i___renderer_8h_source.html  _light_8cpp.html  _light_8h.html  _light_8h_source.html  _main_8cpp.html  _main_8cpp.js  _mesh_model_8cpp.html  _mesh_model_8h.html  _mesh_model_8h_source.html  _preprocessor_defs_8h.html  _preprocessor_defs_8h.js  _preprocessor_defs_8h_source.html  _program_layers_8h.html  _program_layers_8h.js  _program_layers_8h_source.html  _time_8cpp.html  _time_8h.html  _time_8h_source.html  _utillities_8h.html  _utillities_8h.js  _utillities_8h_source.html  _vk_assets_8cpp.html  _vk_assets_8h.html  _vk_assets_8h_source.html  (+535 more)
XsGameEngine[ReferenceProject]/XsGameEngine-REF/: ProjectInfo.txt  XsGameEngine-REF.vcxproj  XsGameEngine-REF.vcxproj.filters  imgui.ini
XsGameEngine[ReferenceProject]/XsGameEngine-REF/Models/: plane.mtl
XsGameEngine[ReferenceProject]/XsGameEngine-REF/Shaders/OpenGL_Shaders/: frag.spv  shader.frag  shader.vert  (+1 more)
XsGameEngine[ReferenceProject]/XsGameEngine-REF/src/: Camera.cpp  Camera.h  CommonValues.h  GLFW_Window.cpp  GLFW_Window.h  GUI_Renderer.cpp  GUI_Renderer.h  Main - Copy.cpp  Main.cpp  Utillities.h  VulkanRenderer.cpp  VulkanRenderer.h
XsGameEngine[ReferenceProject]/x64/Release/: Vulkan Course ReStructured.exp  Vulkan Course ReStructured.lib
x64/Release/: XsGameEngine[ReferenceProject].exp  XsGameEngine[ReferenceProject].lib
(+222 files in other folders)
